--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .gradle
 build/
+/caches/
+/daemon/
+/native/
+/wrapper/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
